# sgf-render

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate-demos.sh  rebuild-tests.sh
.github/workflows/: build.yml  ci.yml  release.yml
man/: sgf-render.1.in
resources/styles/: fancy.toml  minimalist.toml  simple.toml
scripts/: build-deb.sh  generate-demo-images.sh  generate-man.sh  generate-test-output.sh
src/: args.rs  main.rs
src/lib/: args.rs  board_side.rs  errors.rs  generated_styles.rs  goban.rs  goban_range.rs  goban_style.rs  make_svg.rs  mod.rs  node_description.rs  query.rs  sgf_traversal.rs  text.rs  traversal.rs
src/lib/render/: goban_range.rs  goban_style.rs  mod.rs  options.rs  svg.rs  text.rs
tests/: sample_tests.rs
tests/data/: options.toml.sample
tests/data/custom_style/: input.sgf  options.txt  wacky.toml
tests/data/explicit_range/: options.toml  options.txt
tests/data/explicit_width/: options.toml  options.txt
tests/data/extra_markup/: options.toml  options.txt
tests/data/fancy/: options.toml  options.txt
tests/data/full_board/: options.toml  options.txt
tests/data/kifu/: options.txt
tests/data/kifu_no_labels/: input.sgf  options.txt
tests/data/kifu_with_first_move_number/: options.txt
tests/data/kifu_with_move_number_range/: options.txt
tests/data/label_sides_ew/: options.txt
tests/data/label_sides_nesw/: options.txt
tests/data/label_sides_ns/: options.txt
tests/data/label_sides_w/: options.txt
tests/data/labels/: options.toml  options.txt
tests/data/last_move/: options.toml  options.txt
tests/data/markup/: options.toml  options.txt
tests/data/markup_last_move/: input.sgf
tests/data/minimalist/: options.toml  options.txt
tests/data/move_number/: options.toml  options.txt
tests/data/no_labels/: input.sgf  options.toml  options.txt
tests/data/no_markup/: input.sgf  options.txt
tests/data/node_path/: options.txt
tests/data/node_path_last/: options.txt
tests/data/numbered_moves/: options.toml  options.txt
tests/data/numbered_moves_with_markup/: input.sgf  options.txt
tests/data/prob45/: options.toml  options.txt
tests/data/second_game_number/: input.sgf  options.txt
tests/data/smart_shrink_wrap/: input.sgf
tests/data/starting_number/: options.toml  options.txt
tests/data/variation/: input.sgf  options.txt
tests/data/variation_last/: options.txt
tests/data/variation_tricky/: options.txt
