[package]
name = "sgf-render"
version = "3.0.2"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["baduk", "sgf", "go", "svg", "png"]
repository = "https://github.com/julianandrews/sgf-render/"
readme = "README.md"
description = "A renderer for SGF diagrams."
categories = ["command-line-utilities", "multimedia::images", "rendering", "visualization"]
build = "build.rs"

[lib]
name = "sgf_render"
path = "src/lib/mod.rs"

[features]
default = ["png"]
png = ["resvg", "usvg", "tiny-skia"]

[dependencies]
getopts = "0.2.21"
lazy_static = "1.4.0"
minidom = "0.15.2"
sgf-parse = "4.2.1"
toml = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
resvg = { version = "0.40.0", features = ["text"], optional = true }
usvg = { version = "0.40.0", optional = true }
tiny-skia = { version = "0.11.4", optional = true }
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }

[dev-dependencies]
shell-words = "1.0.0"

[package.metadata.deb]
license-file = ["LICENSE", "0"]
assets = [
    ["target/release/sgf-render", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/sgf-render/", "644"],
    ["FONT-LICENSE", "/usr/share/doc/sgf-render/", "644"],
]
